{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 38,
  "lineage": "91194f1f-f20f-d9ab-d29a-3eab4c70d4c1",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:loadbalancer/app/web-load-balancer/193646f5766039c4",
            "arn_suffix": "app/web-load-balancer/193646f5766039c4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-load-balancer-1911218010.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:740785433437:loadbalancer/app/web-load-balancer/193646f5766039c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0970a7b261abd02fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033565a66a3202a84"
              },
              {
                "subnet_id": "subnet-06dc47814d1a0bbff"
              }
            ],
            "subnets": [
              "subnet-033565a66a3202a84",
              "subnet-06dc47814d1a0bbff"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0aaa795fac7079765",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:listener/app/web-load-balancer/193646f5766039c4/ec7da95fb2e2a7d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:740785433437:listener/app/web-load-balancer/193646f5766039c4/ec7da95fb2e2a7d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:loadbalancer/app/web-load-balancer/193646f5766039c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web-load-balancer",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2",
            "arn_suffix": "targetgroup/web-lb-tg/3456d067bd7a85c2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-load-balancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2-20230624093053184300000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2",
            "target_id": "i-02b4ec2e241af03eb"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.web-lb-tg",
            "module.ec2.aws_instance.web_server_1",
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-load-balancer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2-20230624093042980800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:740785433437:targetgroup/web-lb-tg/3456d067bd7a85c2",
            "target_id": "i-04b663bb86aa89d46"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.web-lb-tg",
            "module.ec2.aws_instance.web_server_2",
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331ebbf81138e4de",
            "arn": "arn:aws:ec2:us-east-2:740785433437:instance/i-06cb02c92398f546e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cb02c92398f546e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02bc189532014e666",
            "private_dns": "ip-10-0-4-148.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.148",
            "public_dns": "ec2-13-58-133-63.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.133.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e090e86b61dca3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096164e2e0db334c2",
            "tags": {
              "Name": "database-server"
            },
            "tags_all": {
              "Name": "database-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c6df311094fdeb"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Private-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331ebbf81138e4de",
            "arn": "arn:aws:ec2:us-east-2:740785433437:instance/i-00c6091c1ab8a42e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c6091c1ab8a42e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0906f09776a17cc51",
            "private_dns": "ip-10-0-3-234.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.234",
            "public_dns": "ec2-18-216-147-202.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.147.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0959a0a532b4ee322",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd51acc09d86184e",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c6df311094fdeb"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Private-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331ebbf81138e4de",
            "arn": "arn:aws:ec2:us-east-2:740785433437:instance/i-02b4ec2e241af03eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b4ec2e241af03eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f6980ce5b639dc0",
            "private_dns": "ip-10-0-1-226.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-3-138-138-106.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.138.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0337f09b74183e6b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc47814d1a0bbff",
            "tags": {
              "Name": "web_server_1"
            },
            "tags_all": {
              "Name": "web_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c6df311094fdeb"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331ebbf81138e4de",
            "arn": "arn:aws:ec2:us-east-2:740785433437:instance/i-04b663bb86aa89d46",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b663bb86aa89d46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c633e8bd6813180f",
            "private_dns": "ip-10-0-2-232.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.232",
            "public_dns": "ec2-18-116-30-227.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.30.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0228ac325ac1c25f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033565a66a3202a84",
            "tags": {
              "Name": "web_server_2"
            },
            "tags_all": {
              "Name": "web_server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c6df311094fdeb"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:security-group/sg-0b0c6df311094fdeb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0c6df311094fdeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSHrom VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0970a7b261abd02fe"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "740785433437",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:security-group/sg-0608dc239d0b8d96d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b0c6df311094fdeb"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0608dc239d0b8d96d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c6df311094fdeb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB-sg",
            "name_prefix": "",
            "owner_id": "740785433437",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.allow_web",
            "module.sg.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:security-group/sg-0679ec0c11a2db3d8",
            "description": "Inbound NFS access from EFS clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0679ec0c11a2db3d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS Mount Target",
            "name_prefix": "",
            "owner_id": "740785433437",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg"
            },
            "tags_all": {
              "Name": "efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:security-group/sg-0970a7b261abd02fe",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0970a7b261abd02fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "740785433437",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-load-balancer"
            },
            "tags_all": {
              "Name": "sg-load-balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0581c56b3c4631457",
            "domain": "vpc",
            "id": "eipalloc-0581c56b3c4631457",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-1-147.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.1.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0519b8f09e0d9e9",
            "domain": "vpc",
            "id": "eipalloc-0a0519b8f09e0d9e9",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-142-22-126.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.22.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:internet-gateway/igw-0f8d9d62266f9556e",
            "id": "igw-0f8d9d62266f9556e",
            "owner_id": "740785433437",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web-ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0581c56b3c4631457",
            "association_id": "eipassoc-05fce430e6546aed2",
            "connectivity_type": "public",
            "id": "nat-05354165dfe5cfc0f",
            "network_interface_id": "eni-0bb7e9dd7e524aee7",
            "private_ip": "10.0.1.48",
            "public_ip": "3.128.1.147",
            "subnet_id": "subnet-06dc47814d1a0bbff",
            "tags": {
              "Name": "nat-gateway 1"
            },
            "tags_all": {
              "Name": "nat-gateway 1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.web-eip1",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web-ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0519b8f09e0d9e9",
            "association_id": "eipassoc-0373b1985ca16b613",
            "connectivity_type": "public",
            "id": "nat-015da59afcb926504",
            "network_interface_id": "eni-015f5746627a06870",
            "private_ip": "10.0.2.188",
            "public_ip": "3.142.22.126",
            "subnet_id": "subnet-033565a66a3202a84",
            "tags": {
              "Name": "nat-gateway 2"
            },
            "tags_all": {
              "Name": "nat-gateway 2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.web-eip2",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:route-table/rtb-0dba3103913569067",
            "id": "rtb-0dba3103913569067",
            "owner_id": "740785433437",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05354165dfe5cfc0f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-1"
            },
            "tags_all": {
              "Name": "private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.web-eip1",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_nat_gateway.web-ngw1",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:route-table/rtb-09d50c9c02660d4ae",
            "id": "rtb-09d50c9c02660d4ae",
            "owner_id": "740785433437",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-015da59afcb926504",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-2"
            },
            "tags_all": {
              "Name": "private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.web-eip2",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_nat_gateway.web-ngw2",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:route-table/rtb-04a889b6d6ff3a885",
            "id": "rtb-04a889b6d6ff3a885",
            "owner_id": "740785433437",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8d9d62266f9556e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-1"
            },
            "tags_all": {
              "Name": "public-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0dfe1ee54baa0f5",
            "route_table_id": "rtb-0dba3103913569067",
            "subnet_id": "subnet-0bd51acc09d86184e"
          },
          "dependencies": [
            "module.vpc.aws_eip.web-eip1",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_nat_gateway.web-ngw1",
            "module.vpc.aws_route_table.rtb-private1",
            "module.vpc.aws_subnet.Private-Subnet-1",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bcb259f2b5a1cda",
            "route_table_id": "rtb-09d50c9c02660d4ae",
            "subnet_id": "subnet-096164e2e0db334c2"
          },
          "dependencies": [
            "module.vpc.aws_eip.web-eip2",
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_nat_gateway.web-ngw2",
            "module.vpc.aws_route_table.rtb-private2",
            "module.vpc.aws_subnet.Private-Subnet-2",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d632865315eb86fa",
            "route_table_id": "rtb-04a889b6d6ff3a885",
            "subnet_id": "subnet-06dc47814d1a0bbff"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_route_table.rtb-public1",
            "module.vpc.aws_subnet.Public-Subnet-1",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75bf233864cd25c",
            "route_table_id": "rtb-04a889b6d6ff3a885",
            "subnet_id": "subnet-033565a66a3202a84"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.web-igw",
            "module.vpc.aws_route_table.rtb-public1",
            "module.vpc.aws_subnet.Public-Subnet-2",
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:subnet/subnet-0bd51acc09d86184e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd51acc09d86184e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740785433437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:subnet/subnet-096164e2e0db334c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096164e2e0db334c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740785433437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:subnet/subnet-06dc47814d1a0bbff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dc47814d1a0bbff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740785433437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:subnet/subnet-033565a66a3202a84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033565a66a3202a84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740785433437",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0aaa795fac7079765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740785433437:vpc/vpc-0aaa795fac7079765",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015155567860df369",
            "default_route_table_id": "rtb-0fe1d0978929c985b",
            "default_security_group_id": "sg-03e900e3089a71514",
            "dhcp_options_id": "dopt-055b30b4f363ed45f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aaa795fac7079765",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe1d0978929c985b",
            "owner_id": "740785433437",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          }
        }
      ]
    }
  ]
}